Fix image placement on mobile landscape screens Fixes #6253

--- a/includes/templates/responsive_classic/css/responsive_mobile.css
+++ b/includes/templates/responsive_classic/css/responsive_mobile.css
@@ -125,7 +125,7 @@ div#productListing tr.productListing-odd {clear:both;}
 .prod-list-wrap{height:auto;}
 .tabTable{display:table;}
 .productListing-odd, .productListing-even{display:table-row;height:100%;padding-top:20px;}
-.list-image{margin:20px 20px 10px auto; text-align:center;display:inline-block;height:100%;vertical-align:top;}
+.list-image{margin:20px 20px 10px auto; text-align:center;display:inline-block;height:auto;vertical-align:top;}
 .list-input{width:25%;margin-right:1.5em;}
 .list-more{margin-right:1.5em;}
 #specialsListing div:nth-child(4n+1), #specialsListing div:nth-child(4n+4){background:#f4f4f4;}
